# context-brain-obsidian

./: .gitignore  AGENTS.md  CLAUDE-BRAIN.md  CLAUDE.md  COPIE-ESTA-LINHA.txt  ONBOARDING.md  README.md  chatcli.sh  criar-atalho-chatcli.sh  criar-symlink-vault.sh  install-chatcli-venv.sh
.cursor/rules/: memoria-rascunho.mdc  salvar-conversa-vault.mdc
.githooks/: post-commit  pre-commit
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json
00-index/: dashboard.md  estado-do-projeto.md  map.md  mapa-vivo.canvas
01-architecture/: README.md
02-backend/: README.md
03-frontend/: README.md
04-flows/: README.md
05-operations/: README.md
06-guidelines/: README.md
07-product/: README.md
08-team/: README.md
_memory/: progress.md
_memory/events/: git-commits.md
_memory/sessions/: 2026-04-06-2103-assunto-da-sessao.md  2026-04-07-entrega-vault-ux-grafo-push.md  _draft-20260406-211021.md  _draft-20260406-211156.md  _draft-20260406-212045.md  _draft-20260406-212415.md  index.md
docs/: graph-export.json  graph-viewer-web.md  obsidian-grafo-3d.md  repo-inventory.md
scripts/brain/: _memory-draft-lib.sh  append-commit.sh  check-wiki-links.sh  export-graph-json.sh  health-check.sh  install-git-alias.sh  (+7 more)
templates/: sessao-vault.md
tools/chatcli/: .gitignore  README.md  install-venv.sh  profiles.example.yaml  profiles.local.yaml.example  pyproject.toml
tools/chatcli/chatcli/: __init__.py  __main__.py  config.py  repl.py
tools/chatcli/chatcli/backends/: __init__.py  anthropic_backend.py  openai_compat.py
