[project]
name = "vault-chatcli"
version = "0.1.0"
description = "CLI de chat multi-backend para testar LM Studio, OpenAI e Anthropic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40",
  "anthropic>=0.34",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatcli"]
